<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBrown"
    tools:context="com.akitektuo.ejas.activitiy.MainActivity">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ListView
        android:id="@+id/list_levels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_settings"
        android:layout_marginLeft="@dimen/space"
        android:layout_marginRight="@dimen/space"
        android:layout_marginTop="@dimen/space"
        android:divider="@null"
        android:scrollbars="none" />

    <RelativeLayout
        android:id="@+id/layout_settings"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/background_options"
        android:paddingBottom="@dimen/space"
        android:paddingLeft="@dimen/space"
        android:paddingRight="@dimen/space">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:text="@string/app_version"
            android:textSize="10sp" />

        <Space
            android:id="@+id/space_selection"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/space"
            android:layout_marginTop="2dp" />

        <Button
            android:id="@+id/button_automatic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_toStartOf="@+id/space_selection"
            android:background="@color/colorAccent"
            android:text="@string/automatic"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button_manual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/space_selection"
            android:background="@color/colorPrimary"
            android:text="@string/manual"
            android:textAllCaps="false" />

        <RelativeLayout
            android:id="@+id/layout_control"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/space_selection">

            <Button
                android:id="@+id/button_refresh"
                android:layout_width="@dimen/button"
                android:layout_height="@dimen/button"
                android:layout_alignParentEnd="true"
                android:background="@drawable/play" />

            <TextView
                android:id="@+id/text_status_auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/button"
                android:text="@string/status_general"
                android:textAlignment="center"
                android:textColor="@color/colorAccent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/text_status_auto"
                android:layout_marginRight="@dimen/button">

                <LinearLayout
                    android:layout_width="@dimen/weight"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/elevator0" />
                    
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center">
                        
                        <ImageView
                            android:id="@+id/image_arrow_0"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/up"
                            android:visibility="gone"/>

                        <TextView
                            android:id="@+id/text_status_auto_0"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/stop"
                            android:textAlignment="center" />
                        
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/weight"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/elevator1" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center">

                        <ImageView
                            android:id="@+id/image_arrow_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/up"
                            android:visibility="gone"/>

                        <TextView
                            android:id="@+id/text_status_auto_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/stop"
                            android:textAlignment="center" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/weight"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/elevator2" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center">

                        <ImageView
                            android:id="@+id/image_arrow_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/up"
                            android:visibility="gone"/>

                        <TextView
                            android:id="@+id/text_status_auto_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/stop"
                            android:textAlignment="center" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/weight"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/elevator3" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center">

                        <ImageView
                            android:id="@+id/image_arrow_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/up"
                            android:visibility="gone"/>

                        <TextView
                            android:id="@+id/text_status_auto_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/stop"
                            android:textAlignment="center" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>

